--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     width="300"
     style="background-color: #3e3e3e">
   </canvas>
+  <h1 class="score"></h1>
 </body>
 <script type="text/javascript" src="fruit.js"></script>
 <script type="text/javascript" src="snake.js"></script>
